; ModuleID = '/home/carl/AnghaBench/git/extr_revision.c_entry_unshown.c'
source_filename = "/home/carl/AnghaBench/git/extr_revision.c_entry_unshown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_array_entry = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@SHOWN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.object_array_entry*, i8*)* @entry_unshown to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @entry_unshown(%struct.object_array_entry* %0, i8* %1) #0 {
  %3 = alloca %struct.object_array_entry*, align 8
  %4 = alloca i8*, align 8
  store %struct.object_array_entry* %0, %struct.object_array_entry** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.object_array_entry*, %struct.object_array_entry** %3, align 8
  %6 = getelementptr inbounds %struct.object_array_entry, %struct.object_array_entry* %5, i32 0, i32 0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @SHOWN, align 4
  %11 = and i32 %9, %10
  %12 = icmp ne i32 %11, 0
  %13 = xor i1 %12, true
  %14 = zext i1 %13 to i32
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
